src/app/signup/signup.component.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

 
 /* Basic Reset */
 * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}
.signupDiv{
    display: flex;
    height: 100%;
   
    /* width:100vw; */
}


.left-section {
    width: 100%;
    /* height:100vh; */
    background: url('/assets/images/unsplash.jpg') no-repeat center center; 
    object-fit: contain;

     position: relative;
    flex: 1;
}

.logo {
    position: absolute;
    top: 20px;
    left: 20px;
    font-size: 24px;
    font-weight: 600;
    color: #FF5722;
    display: flex;
    align-items: center;
}

.logo img {
    height: 30px;
    margin-right: 10px;
}


.right-section {
    background: url('/assets/images/Frame 1000014043.png') ;
    background-size: cover;
    background-position: center;
    /* height: 100%; */
    /* height: 100%; */
    flex: 1; 
    background-color: #f8f9fa;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 30px;
    position: relative;
}

.form-container {
    width: 60%;
    /* max-width: 400px; */
    /* text-align: center; */
}

.form-container h2 {
    margin-top: 50px;
    margin-left: 30px;
    margin-bottom: 5px;
    font-family: Open Sans;
font-size: 24px;
font-weight: 700;
color: #2C2A2A;
}

.form-container p {
    padding-left: 10px;
    align-items: center;
    font-size: 12px;
    color: #555;
    padding-top: 7px;
    margin-bottom: 30px;
}

.google-signup {
    background: none;
    border: 1px solid #2C2A2A;
    border-radius: 3px;
    /* height: 22px; */
    width: 75%;
    cursor: pointer;
    margin-top: 3px;
    margin-bottom: 5px;
padding:5px;
font-family: Open Sans;
    font-size: 12px;
    font-weight: 500;
}

.google-signup img {
    height: 10px;
    margin-right: 1px;
}
.form-container button:hover {
    background-color: #e64a19;
}


.divider {
    /* margin: 5px 0; */
    font-size: 13px;
    color: #777;
    padding-left: 2px; 
    text-align: center;  
    padding-right:45px;
}


.form-container form {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}



.form-container .mend {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin-top: 15px;
    font-size: 17px;
    margin-bottom:2px;
font-family: Open Sans;

font-weight: 400;

}

.form-container .log {
    border: 1px solid #433a3a;
    border-radius: 3px;
    box-sizing: border-box;
    width: 75%;
    height: 30px;
    font-size:12px;
    padding: 12px;
    margin-top: 3px;
}


.form-container input::placeholder {
    color: #C9A6BCB9;
    font-family: Open Sans;
    font-size: 12px;
    font-weight: 400;
}
.checkbox-container {
    display: flex;
    margin: 10px 0px 0px;
}

.checkbox-container .cont {
font-family: Open Sans;
font-size: 12px;
font-weight: 400;
color: #2C2A2A;
/* width:75%; */
/* padding-top: 10px; */
}
.tnC{
    color: #FF5722;
}

.checkbox-container input {
    /* margin-right: 2px; */
    transform: scale(0.7);
    cursor: pointer;
    width:20px;
    height:30px;
}

.signup-btn {
    background: #FF5722;
    color: #fff;
    border: none;
    border-radius: 3px;
    cursor: pointer;
    width: 75%;
   padding:10px;
    font-size: 13px;
    /* margin-top: 15px; */
    margin-bottom:3px;
}

.signup-btn:hover {
    background: #E64A19;
}

.form-container a {
    display: inline-flex;
    color: #FF5722;
    text-decoration: none;
    font-size: xx-small;
}

.form-container a:hover {
    text-decoration: underline;
}

/* Modal Styling */
.modal {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    justify-content: center;
    align-items: center;
    z-index: 9999;
}

/* Show modal when target is triggered */
#successModal:target {
    display: flex;
}

.modal-content {
    background: white;
    padding: 30px;
    border-radius: 10px;
    text-align: center;
    width: 400px;
    max-width: 80%;
}

.modal-content img {
    height: 140px;
    margin-top: 40px;
}

.modal-content h3 {
    font-size: 17px;
    font-weight: 600;
}

.modal-content p {
    font-size: 11px;
    color: #555;
    margin-bottom: 20px;
}

.modal-content .loading {
    display: flex;
    justify-content: center;
}

.loading span {
    width: 12px;
    height: 12px;
    margin: 0 3px;
    background-color: #FF5722;
    border-radius: 50%;
    animation: bounce 1.5s infinite;
}

.loading span:nth-child(2) {
    animation-delay: 0.3s;
}

.loading span:nth-child(3) {
    animation-delay: 0.6s;
}

@keyframes bounce {
    0%, 100% {
        transform: translateY(0);
    }
    50% {
        transform: translateY(-10px);
    }
}

.close-btn {
    display: inline-block;
    margin-top: 20px;
    text-decoration: none;
    color: #FF5722;
    font-weight: 500;
}

.close-btn:hover {
    text-decoration: underline;
}

